# ledmatrix-server

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yml
ledmatrix_server/: common.py  config.py  helpers.py  homeassistant.py  main.py  render.py  weather.py
ledmatrix_server/resources/: loader.py
ledmatrix_server/resources/fonts/: 10x20_reduced-20.bdf
tests/: test_debug.py  test_renderer.py
